
(Unreleased) Version 0.3.6-beta:

Features
 * Add JSON support for OWL web services
 * Improve support for saving OBO via oboformat-tools in OWL-API
 * Extended reasoner framework for returning super class *expressions*
 * OORT: Add external configuration files
 * OORT: Add flag for loading a configuration file in the command-line version
 * OORT: Add GUI Menu to load and store configuration files, including a file history
 * OORT: Add option to use URLs as source for ontologies
 * OORT: Change default output folder for GUI to $(USER_HOME)/OORT

BugFixes
 * OORT: command-line option '-h' for help

Documentation
 * Fix some broken links in the JavaDoc
 * Start change log
