@@ -1,0 +1,22 @@
+format-version: 1.2
+default-namespace: a
+ontology: a
+
+[Term]
+id: A:0000001
+name: a1
+
+
+[Term]
+id: A:0000002
+name: a2
+is_a: A:0000001 ! a1
+intersection_of: A:0000001 ! a1
+intersection_of: B:0000001
+
+[Term]
+id: A:0000003
+name: a3
+is_a: A:0000001 ! a1
+intersection_of: A:0000001 ! a1
+intersection_of: C:0000001 
