@@ -1,0 +1,14 @@
+format-version: 1.2
+default-namespace: b
+ontology: b
+
+[Term]
+id: B:0000001
+name: b1
+
+
+[Term]
+id: C:0000001
+name: c1
+namespace: c
+def: "Definition for term c1 in B" [GOC:test, GOC:test2]
